@@ -1,47 +1,47 @@
 package ca.mengern.game.cardlibrary.deck;
 
 import java.util.Collections;
-import java.util.LinkedList;
+import java.util.List;
 
 import ca.mengern.game.cardlibrary.card.Card;
 
 public abstract class Deck<T extends Card> {
 
-  protected LinkedList<T> deck;
+  protected List<T> cards;
 
-  public Deck(LinkedList<T> deck) {
+  public Deck(List<T> cards) {
     super();
-    this.deck = deck;
+    this.cards = cards;
   }
 
   public T draw() {
-    return deck.removeFirst();
+    return cards.remove(0);
   }
 
   /**
    * Inspect the card located at a particular position
-   * 
+   *
    * @param numberFromTop
    *          The location of the card to inspect
    * @return The {@link Card} located at that position
    */
   public T inspect(int numberFromTop) {
-    return deck.get(numberFromTop);
+    return cards.get(numberFromTop);
   }
 
   public T inspectTop() {
-    return deck.get(0);
+    return cards.get(0);
   }
 
   public T inspectBottom() {
-    return deck.get(deck.size() - 1);
+    return cards.get(cards.size() - 1);
   }
 
   public int size() {
-    return deck.size();
+    return cards.size();
   }
 
   public void shuffle() {
-    Collections.shuffle(deck);
+    Collections.shuffle(cards);
   }
 }
